set default value for kafka bootstratp
Signed-off-by: Francisco Vila <fvila@redhat.com>